<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/param_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/setupTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="20dp"
            android:text="@string/setuptitletext"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="40dp"
            android:paddingTop="40dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TableRow>

                <Button
                    android:id="@+id/Button01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3"
                    android:onClick="clickOK"
                    android:text="@string/button01text"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <Button
                    android:id="@+id/Button02"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3"
                    android:onClick="clickSave"
                    android:text="@string/button02text"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <Button
                    android:id="@+id/Button03"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3"
                    android:onClick="clickExit"
                    android:text="@string/button03text"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

            </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp">

            <TableRow
                android:paddingBottom="20dp"
                android:paddingTop="20dp">

                <TextView
                    android:id="@+id/paramLabelPart"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/paramlabelparttext"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/paramParticipant"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:singleLine="true" />
            </TableRow>

            <TableRow
                android:paddingBottom="20dp"
                android:paddingTop="20dp">

                <TextView
                    android:id="@+id/paramLabelSess"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/paramlabelsesstext"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/paramSession"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <TableRow
                android:paddingBottom="20dp"
                android:paddingTop="20dp">

                <TextView
                    android:id="@+id/paramLabelGroup"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/paramlabelgrouptext"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/paramGroup"
                    android:layout_weight="1"
                    android:gravity="left" />
            </TableRow>

            <TableRow
                android:paddingBottom="20dp"
                android:paddingTop="20dp">

                <TextView
                    android:id="@+id/paramLabelCondition"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/paramlabelconditiontext"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/paramCondition"
                    android:layout_weight="1"
                    android:gravity="left" />
            </TableRow>

        </TableLayout>
    </LinearLayout>

</ScrollView>
